[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[project]
name = "workflow-utils"
description = "Fal's workflow utilities"
readme = "README.md"
dependencies = [
    "pydantic<2.0,>=1.8",
    "pyyaml",
    "fal"
]
version = "0.1.0"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.unimport]
remove = true
ignore_init = true

[tool.mypy]
no_warn_no_return = true
disallow_incomplete_defs = false
disable_error_code = "attr-defined"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = [
    "tests",
    "workflow",
]
